# ummit-settings

./: Cargo.toml  README.md  build.sh  ummit-settings.desktop
.github/workflows/: build.yml
src/: main.rs
