[package]
name = "ummit-settings"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Settings application for UmmItOS"
authors = ["UmmItOS Team"]

[dependencies]
gtk = { version = "0.9.7", package = "gtk4" }
gio = "0.20.12"
glib = "0.20.12"
tokio = { version = "1.45.1", features = ["full"] }
chrono = "0.4.41"